Fix pivot facet list item alignment and collapse/expand buttons. Fixes #3554 & #3679 - apply the "pivot-facet" class to the top level wrapping ul, not child uls - give expand/collapse button focus style for keyboard accessibility - ensure that sibling list items are horizontally aligned regardless of expandability - ensure that expand/collapse buttons for active facets don't inherit hover/active styles from facet header

--- a/app/assets/builds/blacklight.css
+++ b/app/assets/builds/blacklight.css
@@ -388,11 +388,13 @@ main {
 .facet-toggle-handle {
   margin-block: 0;
   padding-block: 0;
-  padding-inline: 0.5rem;
-  margin-inline-start: -0.75rem;
-}
-.pivot-facet .facet-toggle-handle {
-  margin-inline-start: -1.5rem;
+  padding: 0;
+  border: 0;
+  width: 1em;
+  height: 1em;
+  margin-right: 0.5em;
+  --bs-btn-hover-bg: var(--bs-btn-hover-bg);
+  --bs-btn-active-bg: var(--bs-btn-active-bg);
 }
 .facet-toggle-handle.collapsed .show {
   display: flex;
@@ -410,13 +412,16 @@ main {
 .facet-toggle-handle .hide .icon {
   width: 1em;
   height: 1em;
-  padding: 0.375rem 0.75rem;
 }
 .facet-toggle-handle .show .icon {
   background: transparent url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16"%3e%3cpath d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" /%3e%3cpath d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" /%3e%3c/svg%3e') center/1em auto no-repeat;
 }
 .facet-toggle-handle .hide .icon {
   background: transparent url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-square" viewBox="0 0 16 16"%3e%3cpath d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" /%3e%3cpath d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z" /%3e%3c/svg%3e') center/1em auto no-repeat;
+}
+
+ul.pivot-facet li.treeitem:not(:has(button)) {
+  margin-left: calc(1em + 0.5em);
 }
 
 /* Search History */
