--- a/app/assets/stylesheets/blacklight/_facets.scss
+++ b/app/assets/stylesheets/blacklight/_facets.scss
@@ -164,19 +164,18 @@ $facet-toggle-show-icon: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2
 $facet-toggle-hide-icon: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-square" viewBox="0 0 16 16"><path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" /><path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z" /></svg>') !default;
 $facet-toggle-width: 1em !default;
 $facet-toggle-height: $facet-toggle-width !default;
+$facet-toggle-margin: 0.5em !default;
 
 .facet-toggle-handle {
   margin-block: 0;
   padding-block: 0;
-  padding-inline: 0.5rem;
-
-  // keep the icon span centered in the button, but shift to the left for equal spacing inside row
-  margin-inline-start: -1 * $btn-padding-x;
-
-  .pivot-facet & {
-    // shift pivot values a little more aggressively for better compact display
-    margin-inline-start: -2 * $btn-padding-x;
-  }
+  padding: 0;
+  border: 0;
+  width: $facet-toggle-width;
+  height: $facet-toggle-height;
+  margin-right: $facet-toggle-margin;
+  --bs-btn-hover-bg: var(--bs-btn-hover-bg);
+  --bs-btn-active-bg: var(--bs-btn-active-bg);
 
   &.collapsed {
     .show {
@@ -200,7 +199,6 @@ $facet-toggle-height: $facet-toggle-width !default;
   .hide .icon {
     width: $facet-toggle-width;
     height: $facet-toggle-height;
-    padding: $btn-padding-y $btn-padding-x;
   }
 
   .show .icon {
@@ -212,4 +210,10 @@ $facet-toggle-height: $facet-toggle-width !default;
     background: transparent escape-svg($facet-toggle-hide-icon) center /
       $facet-toggle-width auto no-repeat;
   }
+}
+
+// If the item has no expand button, we align it with its siblings that do
+// by giving it left margin equal to the sum of the button's width & margin
+ul.pivot-facet li.treeitem:not(:has(button)) {
+  margin-left: calc(#{$facet-toggle-width} + #{$facet-toggle-margin});
 }
